# wasdoing

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  __main__.py  config.toml.example  doc  markdown_handler.py  move_docs.sh  pyproject.toml  requirements.txt  setup.py  watcher.py
.github/: PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/wiki/: contexts.md  contributing.md  database.md  development.md  index.md  installation.md  onboarding.md  project-structure.md  watch-mode.md
setup/: __init__.py  config.py  display.py  interactive.py
src/wasdoing/cli/: commands.py
src/wasdoing/core/: config.py
src/wasdoing/setup/: __init__.py  config.py  database.py  interactive.py
src/wasdoing/ui/: setup_wizard.py  sql_shell.py  watch.py
src/wasdoing/worklog/: __init__.py  context.py  generator.py  repository.py
