[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "was-doing"
version = "0.1.0"
description = "A development-friendly work documentation system"
readme = "README.md"
authors = [
    { name = "James" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = [
    "rich",
    "toml",
    "watchdog",
]

[project.scripts]
doc = "wasdoing.cli.commands:main"
